objects/Customer_Care_SharedEmailBox__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Group__c</fullName>
        <label>Case Group</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIBU__c</fullName>
        <label>GIBU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Routing_Address__c</fullName>
        <label>SFDC Routing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Care Shared EmailBox</label>
    <listViews>
        <fullName>APAC</fullName>
        <columns>NAME</columns>
        <columns>Case_Group__c</columns>
        <columns>GIBU__c</columns>
        <columns>Office__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <label>APAC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APAC_Names</fullName>
        <columns>NAME</columns>
        <columns>Business_Hours__c</columns>
        <columns>Case_Group__c</columns>
        <columns>GIBU__c</columns>
        <columns>Office__c</columns>
        <columns>Region__c</columns>
        <columns>SFDC_Routing_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>apac</value>
        </filters>
        <label>APAC Names</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Hours__c</columns>
        <columns>Case_Group__c</columns>
        <columns>GIBU__c</columns>
        <columns>Office__c</columns>
        <columns>Region__c</columns>
        <columns>SFDC_Routing_Address__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSD_APAC_Mailbox</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>Business_Hours__c</columns>
        <columns>Case_Group__c</columns>
        <columns>GIBU__c</columns>
        <columns>Office__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GIBU__c</field>
            <operation>equals</operation>
            <value>Consumer Devices</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <label>CSD APAC Mailbox</label>
        <language>en_US</language>
    </listViews>
</CustomObject>